<resources>
    <string name="app_name">EpiArfic-Mobile-App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="vulnerable_population">Vulnerable Population</string>
    <string name="others">Others</string>
    <string name="business">Business</string>
    <string name="community">Community</string>
    <string name="education">Education</string>
    <string name="research">Research</string>
    <string name="health">Health</string>
    <string name="recent">Recent</string>

</resources>
