<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/recent"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_health"
            android:icon="@drawable/health"
            android:title="@string/health" />
        <item
            android:id="@+id/nav_research"
            android:icon="@drawable/research"
            android:title="@string/research" />

        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/education"
            android:title="@string/education" />

        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/community"
            android:title="@string/community" />

        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/business"
            android:title="@string/business" />

        <item
            android:id="@+id/nav_vulnerable_population"
            android:icon="@drawable/vulnorable"
            android:title="@string/vulnerable_population" />

        <item
            android:id="@+id/nav_others"
            android:icon="@drawable/others"
            android:title="@string/others" />
    </group>
</menu>
